--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,194 @@ a{
     font-size: 18px;
     color: #37393F;
 }
-body{
-    height: 2000px;
+.container{
+    width: 1220px;
+    /* background-color: aqua; */
+    height: 510px;
+    margin: 0 auto;
+    margin-top: 136px;
+}
+.block{
+/* background-color: darkgreen; */
+width: 283px;
+height: 86px;
+margin: 0 auto;
+}
+h3{
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: #37393F;
+    font-size: 18px;
+    text-align: center;
+}
+h2{
+    font-family: "Poppins", sans-serif;
+font-weight: 700;    
+font-size: 40px;
+color: #37393F;
+margin-top: 16px;
+}
+.section-div{
+    /* background-color: burlywood; */
+    width: 1220px;
+    height: 383px;
+    margin-top: 41px;
+    display: flex;
+    gap: 31px;
+}
+.box{
+    background-color: #F4F4F4;
+    width: 386px;
+    height: 383px;
+    padding-top: 58px;
+    padding-left: 43px;
+}
+.description-div{
+    
+    width: 300px;
+    height: 185px;
+
+}
+h5{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    color: #37393F;
+    text-align: center;
+    margin-bottom: 16px;
+}
+p{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #7D7D7D;
+    line-height: 146%;
+    text-align: center;
+    
+}
+.lastp{
+    color: #6B77E5;
+    margin-top: 37px;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+.icon-div{
+    width: 72px;
+    height: 72px;
+    background-color: #40DDB6;
+    margin-top: 10px;
+    border-radius: 100%;
+    margin-left: 111px;
+    text-align: center;
+
+}
+.iconimg{
+    width: 43px;
+    height: 43px;
+    margin: 14.5px;
+    
+}
+.middle-div{
+    background-color: #6B77E5;
+}
+.text-div{
+    width: 511px;
+    height: 270.5px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50% , -50%);
+}
+section{
+    margin-bottom: 60px;
+}
+.image-wraper{
+     position: relative;
+    display: inline-block;
+}
+h6{
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: #37393F;
+    font-size: 18px;
+    text-align: center;
+}
+.imageh2{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #37393F;
+    text-align: center;
+    margin-top: 16px;
+}
+.imagep{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #37393F;
+    line-height: 146%;
+    margin-top: 21px;
+    text-align: center;
+    
+}
+.icon-div2{
+    width: 64.5px;
+    height: 64.5px;
+    background-color: #6B77E5;
+    margin-top: 47px;
+    display: flex;
+    margin-left: 223px;
+    border-radius: 100%;
+    align-items: center;
+    justify-content: center;
+}
+footer{
+    background-color: chartreuse;
+    width: 1220px;
+    height: 659px;
+    margin: 0 auto;
+    margin-top: 130px;
+}
+.footerdiv{
+    width: 348px;
+    height: 86px;
+    /* background-color: #6B77E5; */
+    margin: 0 auto;
+}
+.footerp{
+    font-family: "Inter", sans-serif;
+    color: #37393F;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+}
+.footerh2{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #37393F;
+    text-align: center;
+    margin-top: 16px;
+}
+.footer-div2{
+    background-color: #6B77E5;
+    width: 1220px;
+    height: 532px;
+    margin-top: 41px;
+
+}
+.footer-box{
+    width: 386px;
+    height: 532px;
+    background-color: pink;
+    position: relative;
+}
+.name-div{
+    width: 341px;
+    height: 114px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
 }
