--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 header{
-    /* background-color: aqua; */
+    background-color: white;
     position: sticky;
     top: 0;
+    z-index: 1;
+
 }
 .header-container{
     /* background-color: chocolate; */
@@ -128,6 +130,10 @@ section{
 .image-wraper{
      position: relative;
     display: inline-block;
+    
+}
+.photo{
+    width: 100%;
 }
 h6{
     font-family: "Inter", sans-serif;
@@ -166,7 +172,6 @@ h6{
     justify-content: center;
 }
 footer{
-    background-color: chartreuse;
     width: 1220px;
     height: 659px;
     margin: 0 auto;
@@ -175,7 +180,6 @@ footer{
 .footerdiv{
     width: 348px;
     height: 86px;
-    /* background-color: #6B77E5; */
     margin: 0 auto;
 }
 .footerp{
@@ -193,24 +197,36 @@ footer{
     text-align: center;
     margin-top: 16px;
 }
-.footer-div2{
-    background-color: #6B77E5;
-    width: 1220px;
-    height: 532px;
+.flex-wraper{
+    display: flex;
+    justify-content: space-between;
     margin-top: 41px;
-
+}
+.white-box{
+    width: 341px;
+    background-color: white;
+    height: 114px;
+    position: absolute;
+    left: 22px;
+    bottom: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .footer-box{
-    width: 386px;
-    height: 532px;
-    background-color: pink;
     position: relative;
 }
-.name-div{
-    width: 341px;
-    height: 114px;
-    background-color: white;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+.lasth3{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    color: #37393F;
+}
+.lasth4{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #7D7D7D;
+    margin-top: 4px;
 }
